--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
+    <string name="normal_search">normal search</string>
+    <string name="custom_search">custom search</string>
+
+    <string name="back_key_message">Please click BACK again to exit</string>
 </resources>
