--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,15 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
 
-    <string name="normal_search">normal search</string>
-    <string name="custom_search">custom search</string>
+    <string name="common_search">Common Search</string>
+    <string name="custom_search">Custom Search</string>
 
     <string name="back_key_message">Please click BACK again to exit</string>
+    <string name="search_hint">Search (ex.Dragon Hill Spa ...)</string>
+
+
+    <string name="schedule_capital">SCHEDULE</string>
+    <string name="location_capital">LOCATION</string>
+    <string name="facility_capital">FACILITY</string>
+    <string name="price_capital">PRICE</string>
 </resources>
